--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 [contenteditable][placeholder]:empty:before {
     content: attr(placeholder);
     position: absolute;
-    color: gray;
+    color: #c9c9c9;
     background-color: transparent;
 }
 .notesGrid {
