--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    font-size: 3rem;
+    line-height: 1;
+}
+h2 {
+    font-size:  2.25rem;
+    line-height: 2.5rem;
+}
+h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+}
+h4 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+h5 {
+    font-size: 1.125;
+    line-height: 1.75rem;
+}
+h6 {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
