--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,10 @@
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
 }
+img {
+    width: 100%;
+    max-width: inherit;
+    height: auto;
+    margin: 2rem auto;
+    border-radius: 0.4rem;
+}
