--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,10 @@ pre {
     border-radius: 0.2rem;
     margin: 2rem auto;
 }
+.note-article {
+    height: 6rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
