--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
 }
+.backgorundImage {
+    background-image: url("https://images.unsplash.com/photo-1624375147958-678d727cc0c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1500&q=80");
+    height: 100vh;
+    background-size: cover;
+    overflow: hidden;
+}
 img {
     width: 100%;
     max-width: inherit;
