--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ pre {
     border-radius: 0.2rem;
     margin: 2rem auto;
 }
-.note-article {
+.shortPage {
     height: 6rem;
     overflow: hidden;
     display: -webkit-box;
