bug fix and code refactor

--- a/src/css/Markdown.module.css
+++ b/src/css/Markdown.module.css
@@ -5,6 +5,9 @@
     margin: 1rem auto;
     font-weight: 500;
 }
+.markdown p {
+    margin: 0.8rem auto;
+}
 .markdown blockquote {
     background-color: #FEF3C7;
     border-radius: 0.2rem;
@@ -51,7 +54,8 @@
     width: 100%;
     max-width: inherit;
     height: auto;
-    margin: auto;
+    margin: 2rem auto;
+    border-radius: 0.2rem;
 }
 .markdown table {
     display: block;
