--- a/src/css/Markdown.module.css
+++ b/src/css/Markdown.module.css
@@ -37,6 +37,7 @@
     background-color: #1f2937;
     padding: 0.5rem;
     border-radius: 0.2rem;
+    overflow: auto;
 }
 .markdown pre code {
     font-family: monospace;
